2001-12-11  Miguel Sofer  <msofer@users.sourceforge.net>

	* doc/CrtInterp.3:
	* generic/tclBasic.c: docs and comments corrections [Bug 493412]
	Bug & patch by Don Porter.  
	

2001-12-14  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* win/tclWinNotify.c (Tcl_FinalizeNotifier): Stop Tcl on Windows
	from crashing when shutdown from a non-Tcl thread. Fixes Bug
	#217982 [orig. 5804] reported by Hugh Vu and Gene Leache.   I'm
	not convinced that the shutdown process is right even with this,
	but it was definitely wrong without...

2001-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net> 

	* win/tclWinSock.c (TcpGetOptionProc): Fix for tcl bug item
	  #478565 reported by an unknown person. Bypasses all calls to
	  "gethostbyaddr" for address "0.0.0.0" to prevent delays on
	  Win/NT.

2001-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net> 

	* generic/tclIO.c (Tcl_GetsObj): Applied patch for bug #491341 as
	  provided by Don Porter <dgp@users.sourceforge.net>. Fixes the
	  assumption of having an empty Tcl_Obj to work with.

2001-12-11  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclCompCmds.c:
	* generic/tclCompile.c:
	* generic/tclExecute.c: consistency patch, to make all
	  instructions that pop a variable number of Tcl_Obj's off the
	  execution stack take the number of popped objects as first
	  operand. Modified *only* the new instructions
	  INST_LIST_INDEX_MULTI and INST_LSET_FLAT, so this has no effect
	  on bytecodes generated up to tcl8.4a3 inclusive.

	* generic/tclExecute.c: fix debug messages in INST_LSET_LIST. 

	* generic/tclCompCmds.c (TclCompileLindexCmd):
	* generic/tclCompExpr.c (CompileMathFuncCall): removed the last
	  two overestimates of the necessary stack depth for bytecodes in
	  the fix of [Bug 483611].

2001-12-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net> 

	* unix/tclUnixPipe.c (TclpCreateProcess): Applied Don Porter's
	  patch fixing bug #437489.
