@@ -512,7 +512,6 @@ query/maxRead
 read
 query/maxRead
 flush/read
-query/maxRead
 delete/read
 --------
 create/write
@@ -565,7 +564,6 @@ read {
 }
 query/maxRead {} -1
 flush/read {} {}
-query/maxRead {} -1
 delete/read {} *ignored*
 --------
 create/write {} *ignored*
@@ -624,7 +622,6 @@ write %^&*()_+-= %^&*()_+-=
 write {
 } {
 }
-query/maxRead {} -1
 delete/read {} *ignored*
 flush/write {} {}
 delete/write {} *ignored*}
